# securevault-browser

./: .gitignore  BUILD_STATUS.md  CREATED_FILES.txt  ICON_REFERENCE.txt  LICENSE  PROJECT_DOCUMENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build-all-for-release.sh  build-all-packages.sh  build-all-platforms.sh  build-appimage.sh  build-branded.sh  build-chromium.sh  build-debian-branded.sh  build-debian-package.sh  build-macos.sh  build-rpm-branded.sh  build-rpm-package.sh  build-secure.sh  build-ungoogled.sh  build-windows-msi.sh  build-windows.sh  build-with-ungoogled.sh  build.sh  create-windows-package.sh  generate-icons.sh  package-linux.sh  package-macos.sh  package-windows.sh  run.sh  setup-secureos-repo.sh  setup.sh
.github/workflows/: build-linux.yml  (+3 more)
arch/: PKGBUILD  README.md
branding/: README.md  first-run-page.html  securevault.gni  securevault_strings.grd
builds/: SecureVault-Browser-6.0.0-20251028-branded-linux-x64.tar.gz.sha256  SecureVault-Browser-6.0.0-20251028-windows-x64-portable.zip.sha256  SecureVault-Browser-6.0.0-build20251028-linux-x64.tar.gz.sha256  SecureVault-Browser-6.0.0-build20251028-linux-x64.tar.gz.sha512  SecureVault-Browser-6.0.0-build20251028-linux-x64.tar.gz.verify  SecureVault-Browser-Windows.html  securevault-browser-6.0.0-1.x86_64.rpm.sha256  securevault-browser.list  securevault-browser.repo  securevault-browser_6.0.0-20251028_amd64.deb.sha256
docs/: BUILD.md  CONFIGURATION.md  CROSS_PLATFORM_BUILD.md  PRIVACY.md  TROUBLESHOOTING.md
patches/: 001-disable-tracking.patch  002-barrer-software-branding.patch
